# lowlevel

./: .gitignore  Debug commands reminder.md  How to disassemble and patch stripped ELF binary.md  README.md
examples/elf64-parse/: CMakeLists.txt
examples/elf64-parse/src/: app.c  app.h  main.c
examples/elf64-parse/src/mappings/: map_class_desc.c  map_data_desc.c  map_machine_desc.c  map_object_file_type_desc.c  map_osabi_desc.c  map_raw_bytes_desc.c  map_version_desc.c  mappings.h
examples/nolibc1/: .editorconfig  Makefile  README.md  hello.S  hello.c  main.c  syscall.S  types.h  unistd_x86_64.h  write.h
examples/nolibc1-units/: .editorconfig  CMakeLists.txt  README.md
examples/nolibc1-units/src/: _start.S  syscall.h  write.c  write.h
examples/nolibc1-units/tests/: test.spec.cpp
examples/nolibc1-units/tests/helpers/: mock_syscall.c
