
cmake_minimum_required(VERSION 3.16)
project(elf64-parse VERSION 1 LANGUAGES C)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0)

INCLUDE_DIRECTORIES(
	src/include/
	${GLIB_INCLUDE_DIRS}
)

LINK_DIRECTORIES(${GLIB_LIBRARY_DIRS})

FILE(GLOB_RECURSE SRC src/*.c)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${GLIB_LIBRARIES})
